# tri-mesh-developability

./: CMakeLists.txt  README.md
include/: energy.hpp  energy_grad.hpp  mesh.hpp  mesh_matrix.hpp  opt.hpp  remeshing.hpp
src/: energy.cpp  energy_grad.cpp  main.cpp  mesh.cpp  mesh_matrix.cpp  opt.cpp  remeshing.cpp
